--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_slidable: 1.3.0
   hive_flutter: ^1.1.0
+  intl: 0.17.0
 
 dev_dependencies:
   build_runner: ^2.1.11
